@@ -11,7 +11,10 @@ This implementation plan breaks down the dialog system enhancements into discret
   - Add accessible names to existing unified dialog controls
   - _Requirements: 1.1, 1.2, 1.3, 1.4, 1.5, 4.1, 4.2, 4.3, 4.4_
 
-- [ ] 1.1 Create accessibility helper functions
+- [-] 1.1 Create accessibility helper functions
+
+
+
   - Write `SetControlAccessibility()` function to set accessible names and descriptions
   - Write `NotifyAccessibilityStateChange()` function for screen reader notifications
   - Write `IsScreenReaderActive()` function to detect active screen readers
